# rez-pip

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  REUSE.toml  codecov.yml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  zizmor.yml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  copywrite.yaml  docs.yaml  release.yaml  update_pip.yaml  zizmor.yaml
docs/: Makefile  make.bat  requirements.txt
docs/source/: api.rst  changelog.md  command.rst  conf.py  faq.rst  index.rst  metadata.rst  plugins.rst  transition.rst  user_guide.rst
scripts/: download_pip.py  get_pyside6_files.py
src/rez_pip/: __init__.py  __main__.py  cli.py  compat.py  download.py  exceptions.py  install.py  main.py  patch.py  pip.py  rez.py  utils.py
src/rez_pip/data/patches/: pyside6_6_0_0_win_dll_path.patch  pyside6_6_1_0_win_dll_path.patch  pyside6_6_2_4_win_dll_path.patch  pyside6_6_3_0_win_dll_path.patch  pyside6_6_7_3_win_dll_path.patch  pyside6_6_8_1_win_dll_path.patch
src/rez_pip/plugins/: PySide6.py  __init__.py  shiboken6.py
tests/: conftest.py  constraints.txt  requirements.txt  sitecustomize.py  test_cli.py  test_download.py  test_install.py  test_integration.py  test_pip.py  test_rez.py  test_utils.py  utils.py
tests/data/installed_wheels/: .gitattributes
tests/data/installed_wheels/multiple-dist-info/python/multi_a-1.0.0.dist-info/: INSTALLER  METADATA  RECORD  WHEEL
tests/data/installed_wheels/multiple-dist-info/python/multi_b-1.0.0.dist-info/: RECORD
tests/data/installed_wheels/package-a/python/package_a-1.0.0.post0.dist-info/: METADATA  RECORD  WHEEL
tests/data/installed_wheels/package-a/python/package_a-1.post0.dist-info/: RECORD
tests/data/patches/: create_file.patch  modify_file.patch  not_a_patch  remove_file.patch
tests/data/pip/: pip-install.report.rez-pip
tests/data/src_packages/console_scripts/: pyproject.toml
tests/data/src_packages/package_a/: pyproject.toml
tests/data/src_packages/package_a/src/package_a/: __init__.py
tests/data/src_packages/package_b/: pyproject.toml
tests/data/src_packages/package_b/src/console_scripts/: __init__.py
tests/plugins/: set_permissions.py  test_plugins.py  test_postInstall.py  test_pyside6.py  test_shiboken6.py  utils.py
