# SPDX-FileCopyrightText: 2022 Contributors to the rez project
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rez-pip"
version = "0.3.2"
description = "Modern rez-pip"
authors = [
    { name="Jean-Christophe Morin", email="jean_christophe_morin@hotmail.com" },
]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "installer>=0.7.0",
    "aiohttp",
    "packaging>=23.1",
    # 2.114.0 adds rez.version.
    "rez>=2.114.1",
    "dataclasses-json",
    "rich",
    "importlib_metadata>=4.6; python_version < '3.10'",
    # 1.3 introduces type hints.
    "pluggy>=1.2",
    # Patches are finicky... Let's lock on the current latest version.
    # We could always relax later if needed.
    "patch-ng==1.18.1",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]
keywords = []

[project.urls]
Homepage = "https://github.com/JeanChristopheMorinPerso/rez-pip"
Tracker = "https://github.com/JeanChristopheMorinPerso/rez-pip/issues"
Documentation = "https://rez-pip.readthedocs.io"

[project.scripts]
rez-pip2 = "rez_pip.cli:run"

[tool.hatch.build.targets.sdist]
# Ensure the sdist includes a setup.py for older pip versions
# support-legacy = true
exclude = [".github"]
