# SPDX-FileCopyrightText: 2022 Contributors to the rez project
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rez-pip"
version = "0.4.1"
description = "Modern rez-pip"
authors = [
    { name="Jean-Christophe Morin", email="jean_christophe_morin@hotmail.com" },
]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "installer>=0.7.0",
    "aiohttp",
    "packaging>=23.1",
    # 3.3.0 introduces supoprt for entry points plugins.
    "rez>=3.3.0",
    "dataclasses-json",
    "rich",
    "importlib_metadata>=4.6; python_version < '3.10'",
    # 1.3 introduces type hints.
    "pluggy>=1.2",
    # Patches are finicky... Let's lock on the current latest version.
    # We could always relax later if needed.
    "patch-ng==1.19.0",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]
keywords = []

[project.urls]
Homepage = "https://github.com/JeanChristopheMorinPerso/rez-pip"
Tracker = "https://github.com/JeanChristopheMorinPerso/rez-pip/issues"
Documentation = "https://rez-pip.readthedocs.io"

[project.scripts]
rez-pip2 = "rez_pip.cli:run"

[project.entry-points."rez.plugins.command"]
pip2 = "rez_pip"

[tool.hatch.build.targets.sdist]
# Ensure the sdist includes a setup.py for older pip versions
# support-legacy = true
exclude = [".github"]
